//package CommsMessages;
 
//import "google/protobuf/csharp_options.proto";
//
//option (google.protobuf.csharp_file_options).namespace = "Onewheel.Interface";
//option (google.protobuf.csharp_file_options).umbrella_classname = "WorldEventsProtos";

option optimize_for = SPEED;

  message Ping
  {
    required int32 count = 1;
  }
  
  message Register
  {
    required string name = 1;
  }
  
  message Registered
  {
    required string motd = 1;
    required int32 objectid = 2;
  }
  
  message Say 
  {
    required int32 from = 1;
    required int32 target = 2;
    required string text = 3;
  }
  
  message Coords
  {
    required int32 x = 1;
    required int32 y = 2;
  }
  
  message Move
  {
    required int32 object = 1;
    required Coords from = 2;
    required Coords to = 3;
    required int32 speed = 4;
  }
  
  message Action
  {
    required int32 from = 1;
    required Coords target = 2;
    required string what = 3;
    required string with = 4;
  }
  
  message Block
  {
    required Coords location = 1;
    required int32 type = 2;
    required ObjectAction action = 3;
    required Coords destination = 4;
    required int32 speed = 5;
  
    enum ObjectAction {
      eAdd = 0;
      eRemove = 1;
      eMove = 2;
    }
  }

  enum MsgType {
    ePing = 1;
    eRegister = 2;
    eRegistered  = 3;
    eSay = 4;
    eMovement = 5;
    eAction = 6;
    eBlock = 7;
  }

  message Header {
    // Identifies type of following data
    required int32 msgtype = 1;
  }

//service WebService {
//  rpc RegisterClient (RegisterClientRequest) returns (Status);
//  rpc Chat (Say) returns (Status);
//  rpc DoAction (Action) returns (Status);
//  rpc Move (Movement) returns (Status);
//}

//message Person {
//  required string name = 1;
//  required int32 id = 2;
//  optional string email = 3;
//
//  enum PhoneType {
//    MOBILE = 0;
//    HOME = 1;
//    WORK = 2;
//  }
//
//  message PhoneNumber {
//    required string number = 1;
//    optional PhoneType type = 2 [default = HOME];
//  }
//
//  repeated PhoneNumber phone = 4;
//}
// 
//// Our address book file is just one of these.
//message AddressBook {
//  repeated Person person = 1;
//}

//message ServerInfoRequest {
//  required string clientname = 1;
//  optional int32 number = 2;
//}
//
//message ServerInfoResponse {
//  required string servername = 1;
//}

